--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -11,15 +11,16 @@
 </head>
 <body>
     <header>
-        <h1>Marlin Dental Clinic</h1>
+        <h1 class="header">Marlin Dental Clinic</h1>
+        <nav class="navigation modern">
+            <a href="#" title="Home">Home</a>
+            <a href="#" title="About Us">Projects</a>
+            <a href="#" title="Our Partners">Services</a>
+            <a href="#" title="History of Our Organization">Contact Us</a>
+            <a href="#" title="Contact Us">Contact</a>
+        </nav>
       </header>
-      <nav class="navigation modern">
-        <a href="#" title="Home">Home</a>
-        <a href="#" title="About Us">Projects</a>
-        <a href="#" title="Our Partners">Services</a>
-        <a href="#" title="History of Our Organization">Contact Us</a>
-        <a href="#" title="Contact Us">Contact</a>
-    </nav>
+
       <main>Welcome to marlin dental, we offer services such as Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ullamcorper lacus eu elementum vehicula. Donec accumsan est a varius dictum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque in venenatis lectus. Sed at sem tristique, iaculis urna id, commodo leo. Integer consectetur vulputate vulputate. Quisque venenatis est tincidunt elit facilisis euismod. Nulla facilisi. Duis sodales ipsum ut ligula posuere, eu porttitor urna aliquam. Nunc arcu nisl, porttitor nec arcu a, elementum tristique purus. Nam tincidunt nisi at dignissim scelerisque. Etiam molestie augue quam, at dapibus orci pulvinar et. Sed efficitur nunc vel justo gravida, at.</main>
       <aside class="aside-content">Check out our locations</aside>
       <footer>Leave a review</footer>    
