week one homepage commit 3

--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,500;1,500&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,500;1,500&family=Nunito:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
     <script type="module" src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
     <header>
-        <h1>WDD 13: Dynamic Web Fundamentals - <span id="headerName">Godwin Bassey</span></h1>
+        <h1>WDD 13: Dynamic Web Fundamentals - Godwin Bassey</h1>
         <nav>
             <a href="https://www.linkedin.com/in/godwin-bassey-15a28615a/">Linkedin</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
