week one commit 4

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>WDD 13: Dynamic Web Fundamentals - Godwin Bassey</h1>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Godwin Bassey</h1>
         <nav>
             <a href="https://www.linkedin.com/in/godwin-bassey-15a28615a/">Linkedin</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
