--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Godwin Bassey</title>
     <meta name="description"
-        content="WDD 131 - Dynamic Web Fundamentals. Godwin Bassey. About me and my hometown. Sidebar contains general information on Orthodontics, my favorite dental specialty" />
-    <meta name="author" content="Godwin Bassey" />
+        content="WDD 131 - Dynamic Web Fundamentals. Godwin Bassey. About me and my hometown. Sidebar contains general information on Orthodontics, my favorite dental specialty" >
+    <meta name="author" content="Godwin Bassey" >
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,500;1,500&family=Nunito:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
-    <script type="module" src="scripts/getdates.js" defer></script>
+    <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <main>
         <section class="card">
             <h2>About Me</h2>
-            <img src="images/photo_2024-03-04_15-02-23-2.jpg" alt="Godwin in the office">
+            <img src="images/12471460_545472555620742_1974860145986904100_o.jpg" alt="Godwin in the office">
             <p>My name is Godwin Bassey and I am a dentist that lives in Nigeria. I am currently rounding up my
                 mandatory one-year internship in the Unversity of Benin Teaching Hospital which took me away from my
                 hometown of Calabar, Nigeria.</p>
@@ -55,7 +55,7 @@
     </main>
     <footer>
         <p>
-            &copy<span id="currentYear"></span>
+            &copy;<span id="currentYear"></span>
             <span>Godwin Bassey</span>
             <span>Calabar, Nigeria</span>
         </p>
