--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
             <span>Godwin Bassey</span>
             <span>Calabar, Nigeria</span>
         </p>
-        <p id="lastModified">
-
-        </p>
+        <p id="lastModified"></p>
     </footer>
 </body>
 
