week 03 HTML and CSS commit 2

--- a/place.html
+++ b/place.html
@@ -76,7 +76,7 @@
                 </tr>
                 <tr>
                     <td class="criterion">Condtions:</td>
-                    <td class="value" id="temperature">Cool and Showery</td>
+                    <td class="value" id="conditions">Cool and Showery</td>
                 </tr>
 
                 <tr>
