Final commit hopefully

--- a/place.html
+++ b/place.html
@@ -72,16 +72,16 @@
             <table id="weather-table">
                 <tr>
                     <td class="criterion">Temperature:</td>
-                    <td class="value" id="temperature">13</td>
+                    <td class="value" id="temperature">13℉</td>
                 </tr>
                 <tr>
                     <td class="criterion">Condtions:</td>
-                    <td class="value" id="conditions">Cool and Showery</td>
+                    <td class="value" id="conditions">Light showers</td>
                 </tr>
 
                 <tr>
                     <td class="criterion">Wind:</td>
-                    <td class="value" id="wind">14.4</td>
+                    <td class="value" id="wind">14.4 mph</td>
                 </tr>
                 <tr>
                     <td class="criterion">Wind Chill:</td>
