final commit for sure

--- a/place.html
+++ b/place.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>British Columbia</title>
     <meta name="author" content="Godwin Bassey">
-    <meta name="description" content="Responsive webpage of British Columbia and information">
+    <meta name="description" content="Responsive webpage of British Columbia and information on weather and general data">
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
