--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album</title>
     <meta name="description"
-        content="WDD 131 - Dynamic Web Fundamentals. Godwin Bassey. Week 04 Filtered Temples Picture Album" >
-    <meta name="author" content="Godwin Bassey" >
+        content="WDD 131 - Dynamic Web Fundamentals. Godwin Bassey. Week 04 Filtered Temples Picture Album">
+    <meta name="author" content="Godwin Bassey">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +15,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" >
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
 
@@ -24,7 +27,7 @@
         <h1>Temple Album</h1>
         <a class="material-symbols-outlined" id="disappear"></a>
         <nav>
-            <ul class="navigation"> 
+            <ul class="navigation">
                 <li><a href="#" class="home">Home</a></li>
                 <li><a href="#" class="old">Old</a></li>
                 <li><a href="#" class="new">New</a></li>
@@ -45,4 +48,5 @@
         <p id="lastModified"></p>
     </footer>
 </body>
+
 </html>
