site plan commit 2

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -63,11 +63,11 @@
         <section class="wireframe">
             <h2>Wireframe</h2>
             <figure>
-                <img class="desktop" src="images/home-desktop.png" alt="home-desktop">
+                <img class="desktop" src="images/home-desktop.png" alt="home-desktop" loading="lazy" width="884" height="497">
                 <figcaption>Desktop</figcaption>
             </figure>
             <figure>
-                <img class="mobile" src="images/home-mobile.png" alt="home-mobile">
+                <img class="mobile" src="images/home-mobile.png" alt="home-mobile" loading="lazy" width="322" height="498">
                 <figcaption>Mobile</figcaption>
             </figure>
         </section>
