--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
     <meta name="Author" content="Godwin Bassey">
-    <meta name="Description" content="Week 05 product review form assignment">
+    <meta name="Description" content="Week 05 product review form assignment as a part of WDD 131 course requirements">
     <link rel="stylesheet" href="styles/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,6 @@
     </header>
     <main>
         <form action="review.html" method="get" class="prf">
-            <div class="review-counter form-desc"></div>
             <div class="form-desc">Required Field<span class="asterisk">*</span></div>
     
             <fieldset>
